--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta name="author" content="BeEdu Team">
   <title>BeEdu: Learn, Grow, Succeed</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" onerror="this.href='https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css'">
   <!-- Google Fonts: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" onerror="this.href='https://fonts.cdnfonts.com/css/poppins'">
   <!-- AOS (Animate On Scroll) -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" onerror="this.onerror=null; this.href='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css'">
   <!-- Swiper CSS -->
-  <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet" onerror="this.onerror=null; this.href='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css'">
   <!-- FontAwesome for Icons -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" onerror="this.href='https://use.fontawesome.com/releases/v6.4.0/css/all.css'">
   <!-- Custom CSS -->
   <style>
     body {
@@ -216,6 +216,13 @@
     .package-card.active {
       border: 2px solid #007bff;
     }
+    .rating-section {
+      display: none;
+      margin-top: 20px;
+    }
+    .rating-section.active {
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -273,7 +280,7 @@
           <a href="#contact" class="btn btn-hero">Daftar Sesi Gratis</a>
         </div>
         <div class="col-md-5" data-aos="fade-left">
-          <img src="https://source.unsplash.com/600x400/?student,learning" alt="Student Learning" class="img-fluid rounded">
+          <img src="https://source.unsplash.com/600x400/?student,learning" alt="Student Learning" class="img-fluid rounded" onerror="this.src='https://via.placeholder.com/600x400?text=Student+Learning'">
         </div>
       </div>
     </div>
@@ -419,14 +426,14 @@
              <strong>Nomor Rekening:</strong> 123-456-7890<br>
              <strong>Atas Nama:</strong> BeEdu Indonesia</p>
           <p>Setelah transfer, konfirmasi pembayaran via WhatsApp dengan mengirimkan bukti transfer.</p>
-          <a href="https://wa.me/081367315144?text=Saya%20telah%20melakukan%20pembayaran%20via%20transfer%20bank" class="btn btn-primary" target="_blank">Konfirmasi via WhatsApp</a>
+          <a href="https://wa.me/081367315144?text=Saya%20telah%20melakukan%20pembayaran%20via%20transfer%20bank%20untuk%20paket%20[PaketNama]" class="btn btn-primary" target="_blank">Konfirmasi via WhatsApp</a>
         </div>
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
           <h4>QRIS</h4>
           <p>Scan kode QRIS berikut untuk pembayaran cepat:</p>
-          <img src="https://via.placeholder.com/200x200.png?text=QRIS+BeEdu" alt="QRIS BeEdu" class="img-fluid">
+          <img src="https://via.placeholder.com/200x200.png?text=QRIS+BeEdu" alt="QRIS BeEdu" class="img-fluid" onerror="this.src='https://via.placeholder.com/200x200?text=QRIS+Error'">
           <p>Setelah pembayaran, konfirmasi via WhatsApp.</p>
-          <a href="https://wa.me/081367315144?text=Saya%20telah%20melakukan%20pembayaran%20via%20QRIS" class="btn btn-primary" target="_blank">Konfirmasi via WhatsApp</a>
+          <a href="https://wa.me/081367315144?text=Saya%20telah%20melakukan%20pembayaran%20via%20QRIS%20untuk%20paket%20[PaketNama]" class="btn btn-primary" target="_blank">Konfirmasi via WhatsApp</a>
         </div>
       </div>
     </div>
@@ -446,6 +453,13 @@
           <input type="email" class="form-control" id="email" name="email" required>
         </div>
         <div class="mb-3">
+          <label for="role" class="form-label">Peran</label>
+          <select class="form-control" id="role" name="role" required>
+            <option value="student">Siswa</option>
+            <option value="tutor">Tentor</option>
+          </select>
+        </div>
+        <div class="mb-3">
           <label for="needs" class="form-label">Kebutuhan Belajar</label>
           <textarea class="form-control" id="needs" name="needs" rows="4"></textarea>
         </div>
@@ -463,6 +477,32 @@
     <div class="container">
       <h2 class="text-center mb-5" data-aos="fade-up">Jadwal Belajar</h2>
       <div id="scheduleList" class="row"></div>
+    </div>
+  </section>
+
+  <!-- Rating Section -->
+  <section id="rating" class="rating-section" style="display: none;">
+    <div class="container">
+      <h2 class="text-center mb-5" data-aos="fade-up">Berikan Rating untuk Mentor</h2>
+      <form id="ratingForm" class="w-50 mx-auto" data-aos="fade-up">
+        <div class="mb-3">
+          <label for="mentorName" class="form-label">Nama Mentor</label>
+          <input type="text" class="form-control" id="mentorName" name="mentorName" required>
+        </div>
+        <div class="mb-3">
+          <label for="rating" class="form-label">Rating (1-5)</label>
+          <input type="number" class="form-control" id="rating" name="rating" min="1" max="5" required>
+        </div>
+        <div class="mb-3">
+          <label for="review" class="form-label">Review</label>
+          <textarea class="form-control" id="review" name="review" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Kirim Rating</button>
+      </form>
+      <div id="ratingSuccess" class="text-center mt-3" style="display: none; color: green;">
+        Rating berhasil dikirim!
+      </div>
+      <div id="ratingError" class="text-center mt-3" style="display: none; color: red;"></div>
     </div>
   </section>
 
@@ -556,21 +596,25 @@
         </div>
         <div class="modal-body">
           <div class="row" id="packageList"></div>
+          <div id="paymentConfirmation" class="mt-3" style="display: none;">
+            <p>Konfirmasi pembayaran untuk paket yang dipilih:</p>
+            <a href="#" id="confirmPayment" class="btn btn-success">Konfirmasi via WhatsApp</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-app-compat.js'"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-auth-compat.js'"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-firestore-compat.js'"></script>
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" onerror="this.src='https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/js/bootstrap.bundle.min.js'"></script>
   <!-- AOS JS -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" onerror="this.src='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js'"></script>
   <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js" onerror="this.src='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js'"></script>
   <!-- Custom JS -->
   <script>
     // Initialize Firebase
@@ -634,7 +678,8 @@
       }
       auth.createUserWithEmailAndPassword(email, password).then((userCredential) => {
         const user = userCredential.user;
-        saveUserToFirestore(user);
+        const role = 'student'; // Default role saat register
+        saveUserToFirestore(user, role);
         updateUI(user);
         document.getElementById('registerModal').querySelector('.btn-close').click();
       }).catch((error) => {
@@ -662,27 +707,30 @@
       });
     });
 
-    // Save User to Firestore
-    function saveUserToFirestore(user) {
+    // Save User to Firestore with Role
+    function saveUserToFirestore(user, role = 'student') {
       db.collection('users').doc(user.uid).set({
         name: user.displayName || 'User',
         email: user.email,
         uid: user.uid,
         createdAt: new Date().toISOString(),
-        activePackage: null, // Akan diisi saat memilih paket
-        schedules: []
+        activePackage: null,
+        schedules: [],
+        role: role
       }, { merge: true }).catch((error) => {
         console.error('Error saving user: ', error);
       });
     }
 
-    // Update UI based on Auth State
+    // Update UI based on Auth State and Role
     function updateUI(user) {
       const loginItem = document.getElementById('loginItem');
       const registerItem = document.getElementById('registerItem');
       const profileItem = document.getElementById('profileItem');
       const logoutItem = document.getElementById('logoutItem');
       const userProfileNav = document.getElementById('userProfileNav');
+      const scheduleSection = document.getElementById('schedule');
+      const ratingSection = document.getElementById('rating');
 
       if (user) {
         loginItem.style.display = 'none';
@@ -690,13 +738,31 @@
         profileItem.style.display = 'block';
         logoutItem.style.display = 'block';
         userProfileNav.textContent = `Halo, ${user.displayName || user.email}`;
-        userProfileNav.href = '#schedule'; // Arahkan ke jadwal
+        userProfileNav.href = '#schedule';
         loadUserData(user.uid);
+
+        db.collection('users').doc(user.uid).get().then((doc) => {
+          if (doc.exists) {
+            const userData = doc.data();
+            if (userData.role === 'student') {
+              scheduleSection.style.display = 'block';
+              ratingSection.classList.add('active');
+            } else if (userData.role === 'tutor') {
+              scheduleSection.style.display = 'none';
+              ratingSection.style.display = 'none';
+              // Fitur tutor (pembayaran per jam) akan ditambahkan nanti
+            }
+          }
+        }).catch((error) => {
+          console.error('Error loading user role: ', error);
+        });
       } else {
         loginItem.style.display = 'block';
         registerItem.style.display = 'block';
         profileItem.style.display = 'none';
         logoutItem.style.display = 'none';
+        scheduleSection.style.display = 'none';
+        ratingSection.style.display = 'none';
       }
     }
 
@@ -710,13 +776,16 @@
       });
     });
 
-    // Load User Data (Packages and Schedules)
+    // Load User Data (Packages, Schedules, and Role)
     function loadUserData(uid) {
       db.collection('users').doc(uid).get().then((doc) => {
         if (doc.exists) {
           const userData = doc.data();
           displayPackages(userData.activePackage);
           displaySchedules(userData.schedules);
+          if (userData.role === 'student' && userData.activePackage) {
+            document.getElementById('paymentConfirmation').style.display = 'none'; // Sembunyikan konfirmasi jika sudah aktif
+          }
         }
       }).catch((error) => {
         console.error('Error loading user data: ', error);
@@ -743,27 +812,33 @@
             <ul>
               ${pkg.features.map(feature => `<li>${feature}</li>`).join('')}
             </ul>
-            <button class="btn btn-primary mt-2" onclick="selectPackage('${pkg.id}')">Pilih Paket</button>
+            <button class="btn btn-primary mt-2" onclick="selectPackage('${pkg.id}', '${pkg.name}')">Pilih Paket</button>
           </div>
         `;
         packageList.appendChild(col);
       });
     }
 
-    // Select Package
-    function selectPackage(packageId) {
+    // Select Package with Payment Confirmation
+    function selectPackage(packageId, packageName) {
       const user = auth.currentUser;
       if (user) {
-        db.collection('users').doc(user.uid).update({
-          activePackage: packageId
-        }).then(() => {
-          generateSchedule(user.uid, packageId);
-          new bootstrap.Modal(document.getElementById('packageModal')).hide();
-          loadUserData(user.uid);
-        }).catch((error) => {
-          document.getElementById('errorMessage').textContent = error.message;
-          document.getElementById('errorMessage').style.display = 'block';
-        });
+        const paymentLink = `https://wa.me/081367315144?text=Saya%20telah%20memilih%20paket%20${packageName}%20(${packageId})%20dan%20akan%20mengirim%20bukti%20pembayaran`;
+        document.getElementById('confirmPayment').href = paymentLink;
+        document.getElementById('paymentConfirmation').style.display = 'block';
+        document.getElementById('confirmPayment').onclick = () => {
+          db.collection('users').doc(user.uid).update({
+            activePackage: packageId,
+            paymentStatus: 'pending'
+          }).then(() => {
+            generateSchedule(user.uid, packageId);
+            new bootstrap.Modal(document.getElementById('packageModal')).hide();
+            loadUserData(user.uid);
+          }).catch((error) => {
+            document.getElementById('errorMessage').textContent = error.message;
+            document.getElementById('errorMessage').style.display = 'block';
+          });
+        };
       }
     }
 
@@ -806,11 +881,12 @@
       });
     }
 
-    // Handle Form Submission and Save to Firestore
+    // Handle Form Submission with Role
     document.getElementById('registrationForm').addEventListener('submit', async (e) => {
       e.preventDefault();
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
+      const role = document.getElementById('role').value;
       const needs = document.getElementById('needs').value.trim();
       const successMessage = document.getElementById('successMessage');
       const errorMessage = document.getElementById('errorMessage');
@@ -830,6 +906,7 @@
         await db.collection('registrations').add({
           name: name,
           email: email,
+          role: role,
           needs: needs,
           timestamp: new Date().toISOString()
         });
@@ -841,6 +918,45 @@
         errorMessage.textContent = 'Terjadi kesalahan. Silakan coba lagi atau hubungi kami di 081367315144.';
         errorMessage.style.display = 'block';
         successMessage.style.display = 'none';
+      }
+    });
+
+    // Handle Rating Submission
+    document.getElementById('ratingForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const mentorName = document.getElementById('mentorName').value.trim();
+      const rating = document.getElementById('rating').value;
+      const review = document.getElementById('review').value.trim();
+      const ratingSuccess = document.getElementById('ratingSuccess');
+      const ratingError = document.getElementById('ratingError');
+
+      if (!mentorName || !rating || !review) {
+        ratingError.textContent = 'Semua field harus diisi!';
+        ratingError.style.display = 'block';
+        return;
+      }
+      if (rating < 1 || rating > 5) {
+        ratingError.textContent = 'Rating harus antara 1-5!';
+        ratingError.style.display = 'block';
+        return;
+      }
+
+      try {
+        await db.collection('ratings').add({
+          mentorName: mentorName,
+          rating: parseInt(rating),
+          review: review,
+          studentId: auth.currentUser.uid,
+          timestamp: new Date().toISOString()
+        });
+        ratingSuccess.style.display = 'block';
+        ratingError.style.display = 'none';
+        document.getElementById('ratingForm').reset();
+      } catch (error) {
+        console.error('Error saving rating: ', error);
+        ratingError.textContent = 'Terjadi kesalahan. Silakan coba lagi.';
+        ratingError.style.display = 'block';
+        ratingSuccess.style.display = 'none';
       }
     });
 
