--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta name="author" content="BeEdu Team">
   <title>BeEdu: Learn, Grow, Succeed</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" onerror="this.href='https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css'">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" onerror="this.href='https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css'; this.onerror=null;">
   <!-- Google Fonts: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" onerror="this.href='https://fonts.cdnfonts.com/css/poppins'">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" onerror="this.href='https://fonts.cdnfonts.com/css/poppins'; this.onerror=null;">
   <!-- AOS (Animate On Scroll) -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" onerror="this.onerror=null; this.href='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css'">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" onerror="this.href='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css'; this.onerror=null;">
   <!-- Swiper CSS -->
-  <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet" onerror="this.onerror=null; this.href='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css'">
+  <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet" onerror="this.href='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css'; this.onerror=null;">
   <!-- FontAwesome for Icons -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" onerror="this.href='https://use.fontawesome.com/releases/v6.4.0/css/all.css'">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" onerror="this.href='https://use.fontawesome.com/releases/v6.4.0/css/all.css'; this.onerror=null;">
   <!-- Custom CSS -->
   <style>
     body {
@@ -53,7 +53,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('https://source.unsplash.com/1600x900/?education,learning') no-repeat center center/cover;
+      background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/PchI7wAAAABJRU5ErkJggg==') no-repeat center center/cover; /* Placeholder lokal */
       opacity: 0.2;
     }
     .hero-section h1 {
@@ -277,7 +277,7 @@
           <a href="#contact" class="btn btn-hero">Daftar Sesi Gratis</a>
         </div>
         <div class="col-md-5" data-aos="fade-left">
-          <img src="https://source.unsplash.com/600x400/?student,learning" alt="Student Learning" class="img-fluid rounded" onerror="this.src='https://via.placeholder.com/600x400?text=Student+Learning'">
+          <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/PchI7wAAAABJRU5ErkJggg==" alt="Student Learning" class="img-fluid rounded" onerror="this.style.display='none';">
         </div>
       </div>
     </div>
@@ -426,7 +426,7 @@
         <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
           <h4>QRIS</h4>
           <p>Scan kode QRIS berikut untuk pembayaran cepat:</p>
-          <img src="https://via.placeholder.com/200x200.png?text=QRIS+BeEdu" alt="QRIS BeEdu" class="img-fluid" onerror="this.src='https://via.placeholder.com/200x200?text=QRIS+Error'">
+          <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8/5+hHgAHggJ/PchI7wAAAABJRU5ErkJggg==" alt="QRIS BeEdu" class="img-fluid" onerror="this.style.display='none';">
         </div>
       </div>
     </div>
@@ -602,31 +602,37 @@
   </div>
 
   <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-app-compat.js'"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-auth-compat.js'"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-firestore-compat.js'"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-app-compat.js'; this.onerror=null;"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-auth-compat.js'; this.onerror=null;"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js" onerror="this.src='https://cdn.jsdelivr.net/npm/firebase@9.22.0/dist/firebase-firestore-compat.js'; this.onerror=null;"></script>
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" onerror="this.src='https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/js/bootstrap.bundle.min.js'"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" onerror="this.src='https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/js/bootstrap.bundle.min.js'; this.onerror=null;"></script>
   <!-- AOS JS -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" onerror="this.src='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js'"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" onerror="this.src='https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js'; this.onerror=null;"></script>
   <!-- Swiper JS -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js" onerror="this.src='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js'"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js" onerror="this.src='https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js'; this.onerror=null;"></script>
   <!-- Custom JS -->
   <script>
     // Initialize Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyC_fhbF2b-Tg2an3fN-sn2p6nYbMYC3bRQ",
-      authDomain: "beeduwithme.firebaseapp.com",
-      projectId: "beeduwithme",
-      storageBucket: "beeduwithme.firebasestorage.app",
-      messagingSenderId: "1097577891574",
-      appId: "1:1097577891574:web:81cef1772cc41427930ed7",
-      measurementId: "G-X0GTPEGZ40"
-    };
-
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+    let app, auth, db;
+    try {
+      const firebaseConfig = {
+        apiKey: "AIzaSyC_fhbF2b-Tg2an3fN-sn2p6nYbMYC3bRQ",
+        authDomain: "beeduwithme.firebaseapp.com",
+        projectId: "beeduwithme",
+        storageBucket: "beeduwithme.firebasestorage.app",
+        messagingSenderId: "1097577891574",
+        appId: "1:1097577891574:web:81cef1772cc41427930ed7",
+        measurementId: "G-X0GTPEGZ40"
+      };
+      app = firebase.initializeApp(firebaseConfig);
+      auth = firebase.auth();
+      db = firebase.firestore();
+    } catch (error) {
+      console.error('Firebase initialization failed:', error);
+      document.getElementById('errorMessage').textContent = 'Gagal memuat layanan. Periksa koneksi internet.';
+      document.getElementById('errorMessage').style.display = 'block';
+    }
 
     // Validate Email Function
     function isValidEmail(email) {
@@ -642,78 +648,77 @@
 
     // Handle Google Login/Register
     const googleProvider = new firebase.auth.GoogleAuthProvider();
-    document.getElementById('googleLogin').addEventListener('click', () => {
-      auth.signInWithPopup(googleProvider).then((result) => {
-        const user = result.user;
-        loadUserData(user.uid);
-        updateUI(user);
-      }).catch((error) => {
-        document.getElementById('errorMessage').textContent = error.message;
-        document.getElementById('errorMessage').style.display = 'block';
-      });
+    document.getElementById('googleLogin')?.addEventListener('click', () => {
+      if (auth) {
+        auth.signInWithPopup(googleProvider).then((result) => {
+          const user = result.user;
+          loadUserData(user.uid);
+          updateUI(user);
+        }).catch((error) => {
+          handleError(error);
+        });
+      }
     });
 
-    document.getElementById('googleRegister').addEventListener('click', () => {
-      auth.signInWithPopup(googleProvider).then((result) => {
-        const user = result.user;
-        saveUserToFirestore(user, 'student'); // Default role
-        updateUI(user);
-      }).catch((error) => {
-        document.getElementById('errorMessage').textContent = error.message;
-        document.getElementById('errorMessage').style.display = 'block';
-      });
+    document.getElementById('googleRegister')?.addEventListener('click', () => {
+      if (auth) {
+        auth.signInWithPopup(googleProvider).then((result) => {
+          const user = result.user;
+          saveUserToFirestore(user, 'student');
+          updateUI(user);
+        }).catch((error) => {
+          handleError(error);
+        });
+      }
     });
 
     // Handle Email/Password Register
-    document.getElementById('emailRegister').addEventListener('click', () => {
+    document.getElementById('emailRegister')?.addEventListener('click', () => {
+      if (!auth) return;
       const email = document.getElementById('registerEmail').value.trim();
       const password = document.getElementById('registerPassword').value;
       if (!isValidEmail(email)) {
-        document.getElementById('errorMessage').textContent = 'Format email tidak valid!';
-        document.getElementById('errorMessage').style.display = 'block';
+        handleError(new Error('Format email tidak valid!'));
         return;
       }
       if (password.length < 6) {
-        document.getElementById('errorMessage').textContent = 'Password minimal 6 karakter!';
-        document.getElementById('errorMessage').style.display = 'block';
+        handleError(new Error('Password minimal 6 karakter!'));
         return;
       }
       auth.createUserWithEmailAndPassword(email, password).then((userCredential) => {
         const user = userCredential.user;
-        saveUserToFirestore(user, 'student'); // Default role
+        saveUserToFirestore(user, 'student');
         updateUI(user);
-        document.getElementById('registerModal').querySelector('.btn-close').click();
+        document.getElementById('registerModal').querySelector('.btn-close')?.click();
       }).catch((error) => {
-        document.getElementById('errorMessage').textContent = error.message;
-        document.getElementById('errorMessage').style.display = 'block';
+        handleError(error);
       });
     });
 
     // Handle Email/Password Login
-    document.getElementById('emailLogin').addEventListener('click', () => {
+    document.getElementById('emailLogin')?.addEventListener('click', () => {
+      if (!auth) return;
       const email = document.getElementById('loginEmail').value.trim();
       const password = document.getElementById('loginPassword').value;
       if (!isValidEmail(email)) {
-        document.getElementById('errorMessage').textContent = 'Format email tidak valid!';
-        document.getElementById('errorMessage').style.display = 'block';
+        handleError(new Error('Format email tidak valid!'));
         return;
       }
       auth.signInWithEmailAndPassword(email, password).then((userCredential) => {
         const user = userCredential.user;
         updateUI(user);
-        document.getElementById('loginModal').querySelector('.btn-close').click();
+        document.getElementById('loginModal').querySelector('.btn-close')?.click();
       }).catch((error) => {
-        document.getElementById('errorMessage').textContent = error.message;
-        document.getElementById('errorMessage').style.display = 'block';
+        handleError(error);
       });
     });
 
     // Save User to Firestore with WhatsApp
     function saveUserToFirestore(user, role = 'student') {
-      const whatsapp = document.getElementById('whatsapp') ? document.getElementById('whatsapp').value.trim() : null;
+      if (!db) return;
+      const whatsapp = document.getElementById('whatsapp')?.value.trim();
       if (whatsapp && !isValidWhatsapp(whatsapp)) {
-        document.getElementById('errorMessage').textContent = 'Nomor WhatsApp tidak valid! Gunakan format 08xxxxxxxxxx.';
-        document.getElementById('errorMessage').style.display = 'block';
+        handleError(new Error('Nomor WhatsApp tidak valid! Gunakan format 08xxxxxxxxxx.'));
         return;
       }
       db.collection('users').doc(user.uid).set({
@@ -725,11 +730,11 @@
         schedules: [],
         role: role,
         whatsapp: whatsapp || null,
-        progress: 0, // Dummy progress
-        gamificationPoints: 0, // Dummy points
-        learningHistory: [] // Dummy history
+        progress: 0,
+        gamificationPoints: 0,
+        learningHistory: []
       }, { merge: true }).catch((error) => {
-        console.error('Error saving user: ', error);
+        handleError(error);
       });
     }
 
@@ -758,17 +763,19 @@
     }
 
     // Logout
-    document.getElementById('logoutBtn').addEventListener('click', () => {
-      auth.signOut().then(() => {
-        updateUI(null);
-      }).catch((error) => {
-        document.getElementById('errorMessage').textContent = error.message;
-        document.getElementById('errorMessage').style.display = 'block';
-      });
+    document.getElementById('logoutBtn')?.addEventListener('click', () => {
+      if (auth) {
+        auth.signOut().then(() => {
+          updateUI(null);
+        }).catch((error) => {
+          handleError(error);
+        });
+      }
     });
 
     // Load User Data (Profile, Packages, Schedules)
     function loadUserData(uid) {
+      if (!db) return;
       db.collection('users').doc(uid).get().then((doc) => {
         if (doc.exists) {
           const userData = doc.data();
@@ -793,12 +800,13 @@
           displayPackages(userData.activePackage);
         }
       }).catch((error) => {
-        console.error('Error loading user data: ', error);
+        handleError(error);
       });
     }
 
     // Display Packages with Auto Payment
     function displayPackages(activePackage) {
+      if (!db) return;
       const packageList = document.getElementById('packageList');
       packageList.innerHTML = '';
       const packages = [
@@ -826,24 +834,22 @@
 
     // Select Package with Auto Payment
     function selectPackage(packageId) {
-      const user = auth.currentUser;
-      if (user) {
-        db.collection('users').doc(user.uid).update({
-          activePackage: packageId,
-          paymentStatus: 'paid' // Simulasi pembayaran otomatis
-        }).then(() => {
-          generateSchedule(user.uid, packageId);
-          new bootstrap.Modal(document.getElementById('packageModal')).hide();
-          loadUserData(user.uid);
-        }).catch((error) => {
-          document.getElementById('errorMessage').textContent = error.message;
-          document.getElementById('errorMessage').style.display = 'block';
-        });
-      }
+      if (!db || !auth.currentUser) return;
+      db.collection('users').doc(auth.currentUser.uid).update({
+        activePackage: packageId,
+        paymentStatus: 'paid'
+      }).then(() => {
+        generateSchedule(auth.currentUser.uid, packageId);
+        new bootstrap.Modal(document.getElementById('packageModal')).hide();
+        loadUserData(auth.currentUser.uid);
+      }).catch((error) => {
+        handleError(error);
+      });
     }
 
     // Generate Schedule
     function generateSchedule(uid, packageId) {
+      if (!db) return;
       const schedules = [];
       const now = new Date();
       const days = ['Senin', 'Rabu', 'Jumat'];
@@ -852,14 +858,14 @@
 
       days.forEach(day => {
         const time = new Date(now);
-        time.setHours(19, 0, 0, 0); // 7:00 PM WIB
+        time.setHours(19, 0, 0, 0);
         schedules.push({ day: day, time: time.toISOString(), status: 'Scheduled' });
       });
 
       db.collection('users').doc(uid).update({
         schedules: schedules
       }).catch((error) => {
-        console.error('Error generating schedule: ', error);
+        handleError(error);
       });
     }
 
@@ -877,7 +883,7 @@
     }
 
     // Handle Form Submission with WhatsApp
-    document.getElementById('registrationForm').addEventListener('submit', async (e) => {
+    document.getElementById('registrationForm')?.addEventListener('submit', async (e) => {
       e.preventDefault();
       const name = document.getElementById('name').value.trim();
       const email = document.getElementById('email').value.trim();
@@ -888,18 +894,15 @@
       const errorMessage = document.getElementById('errorMessage');
 
       if (!name || !email || !whatsapp || !needs) {
-        errorMessage.textContent = 'Semua field harus diisi!';
-        errorMessage.style.display = 'block';
+        handleError(new Error('Semua field harus diisi!'));
         return;
       }
       if (!isValidEmail(email)) {
-        errorMessage.textContent = 'Format email tidak valid!';
-        errorMessage.style.display = 'block';
+        handleError(new Error('Format email tidak valid!'));
         return;
       }
       if (!isValidWhatsapp(whatsapp)) {
-        errorMessage.textContent = 'Nomor WhatsApp tidak valid! Gunakan format 08xxxxxxxxxx.';
-        errorMessage.style.display = 'block';
+        handleError(new Error('Nomor WhatsApp tidak valid! Gunakan format 08xxxxxxxxxx.'));
         return;
       }
 
@@ -916,12 +919,17 @@
         errorMessage.style.display = 'none';
         document.getElementById('registrationForm').reset();
       } catch (error) {
-        console.error('Error saving data: ', error);
-        errorMessage.textContent = 'Terjadi kesalahan. Silakan coba lagi atau hubungi kami di 6281367315144.';
-        errorMessage.style.display = 'block';
-        successMessage.style.display = 'none';
+        handleError(error);
       }
     });
+
+    // Error Handler
+    function handleError(error) {
+      console.error('Error:', error);
+      const errorMessage = document.getElementById('errorMessage');
+      errorMessage.textContent = error.message || 'Terjadi kesalahan. Silakan coba lagi atau hubungi kami di 6281367315144.';
+      errorMessage.style.display = 'block';
+    }
 
     // Initialize AOS
     AOS.init({
@@ -948,7 +956,7 @@
         const welcomeModal = new bootstrap.Modal(document.getElementById('welcomeModal'));
         welcomeModal.show();
       } catch (error) {
-        console.error('Error showing welcome modal: ', error);
+        handleError(error);
       }
     };
 
@@ -963,15 +971,15 @@
     });
 
     // Open Profile Modal
-    document.getElementById('userProfileNav').addEventListener('click', (e) => {
+    document.getElementById('userProfileNav')?.addEventListener('click', (e) => {
       e.preventDefault();
       const profileSection = document.getElementById('profile');
       profileSection.style.display = profileSection.style.display === 'none' ? 'block' : 'none';
-      loadUserData(auth.currentUser.uid);
+      if (auth.currentUser) loadUserData(auth.currentUser.uid);
     });
 
     // Auth State Change Listener
-    auth.onAuthStateChanged((user) => {
+    auth?.onAuthStateChanged((user) => {
       updateUI(user);
       if (user) {
         loadUserData(user.uid);
